--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,14 +6,36 @@ body {
   outline: none;
   text-decoration: none;
   padding: 10px 70px;
+  height: 50px;
 }
 
 .button__add-sound {
   background-color: transparent;
 }
 
+.button__play {
+  background-color: green;
+}
+
+.button__add-files {
+  background-color: transparent;
+}
+
 .bar__flex-container {
   display: flex;
   width: 100%;
+  justify-content: space-between;
+}
+
+.source {
+  width: 20px;
+  background-color: "blue";
+  height: 20px;
+}
+
+.speaker {
+  width: 20px;
+  background-color: "red";
+  height: 20px;
 }
 /*# sourceMappingURL=main.css.map */
