--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,3 @@
-body {
-  background-attachment: fixed;
-}
-
 .button {
   outline: none;
   text-decoration: none;
@@ -30,13 +26,13 @@ body {
 
 .source {
   width: 20px;
-  background-color: "blue";
+  background-color: blue;
   height: 20px;
 }
 
 .speaker {
   width: 20px;
-  background-color: "red";
+  background-color: red;
   height: 20px;
 }
 /*# sourceMappingURL=main.css.map */
