--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,7 +3,9 @@ body {
 }
 
 @import "base/buttons";
+@import "base/icon-set";
 
  @import "components/bar";
  @import "components/soundSource";
  @import "components/speaker";
+
