--- a/src/sass/base/_buttons.scss
+++ b/src/sass/base/_buttons.scss
@@ -3,9 +3,70 @@
     text-decoration: none;
     padding: 10px 70px;
     height: 50px;
+    border-radius: 15px;
+    margin: 10px;
+
+    font-size: 15px;
+
+    // transition: transform 0.2s;
+    // &:hover {
+    //     transform: translateY(5px);
+    // }
+    
+    &__preview {
+        padding: 5px;
+        height: 30px;
+        width: 30px;
+        margin: 0;
+        margin-right: 10px;
+        color: green;
+
+        & span {
+            font-weight: 900;
+        }
+
+        &:hover {
+            background-color: green;
+            color: white;
+        }
+    }
+
+    &__delete {
+        font-weight: 800;
+        font-size: 10px;
+        height: 20px;
+        width: 20px;
+        margin: 0;
+        padding: 0;
+        float: right;
+        border: none;
+        background-color: transparent;
+       
+
+        transition: background-color 0.2s;
+        &:hover {
+            background-color: red;
+         
+        }
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 2%;
+        
+    }
 
     &__add-sound {
         background-color: transparent;
+        margin-right: 0;
+        border-radius: 0;
+        margin-bottom: 0;
+        
+        transition: background-color 0.2s, color 0.2s;
+
+        &:hover {
+            background-color: black;
+            color: white;
+        }
     }
 
   
@@ -13,11 +74,19 @@
     &__play {
         background-color: green;
         color: white;
+        width: 70px;
+        padding: 0;
+        margin-left: 0px;
+        border-bottom-left-radius: 0;
+        border-top-left-radius: 0;
     }
 
     &__add-files {
-        background-color: transparent;
-       
+        position: absolute;
+        top: 0%;
+        right: 1%;
+        background-color: black;
+        color: white;
     }
 
 }
