--- a/src/sass/components/_bar.scss
+++ b/src/sass/components/_bar.scss
@@ -4,4 +4,53 @@
         width: 100%;    
         justify-content: space-between;
     }
+
+    &__file-input {
+        z-index: 100;
+        position: absolute;
+        right: 0%;
+        top: 0%;
+        margin: 10px;
+     
+        height: 50px;
+        outline: none;
+        opacity: 0;
+
+        
+    }
+
+    &__dropdown {
+        //display: none;
+    }
+}
+
+.dropdown-content {
+    display: none;
+    width: 40%;
+   
+    position: absolute;
+    background-color: #f9f9f9;
+    //min-width: 30%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    left: 1%;
+
+    & div {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+    }
+
+}
+
+
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.select-new {
+    position: relative;
+
 }
