--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,7 +2,9 @@ body {
     
 }
 
+@import "base/typography";
 @import "base/buttons";
+@import "base/animations";
 //@import "base/icon-set";
 // @import "base/fa-regular";
 // @import "base/fa-solid";
