--- a/src/sass/base/_buttons.scss
+++ b/src/sass/base/_buttons.scss
@@ -5,7 +5,7 @@
     height: 50px;
     border-radius: 15px;
     margin: 10px;
-
+    font-family: "Open Sans";
     font-size: 15px;
 
     // transition: transform 0.2s;
