--- a/src/sass/components/_bar.scss
+++ b/src/sass/components/_bar.scss
@@ -1,4 +1,10 @@
 .bar {
+    &__message {
+        font-family: "Open Sans";
+        display: inline-block;
+        margin-left: 10px;
+    }
+
     &__flex-container {
         display: flex;
         width: 100%;    
@@ -44,7 +50,13 @@
 
 }
 
+.dropdown-left {
+    display: inline-block;
+}
 
+.dropdown {
+    display: inline-block;
+}
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -52,7 +64,7 @@
 
 .select-new {
     position: relative;
-
+    font-family: "Open Sans";
 }
 
 .playing {
@@ -63,4 +75,16 @@
         background-color: rgb(175, 8, 7);
         color: white;
     }
+}
+
+.fas {
+    position: relative;
+    float: left;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
+
+.hidden {
+    display: none;
 }
