--- a/src/css/main.css
+++ b/src/css/main.css
@@ -23,6 +23,8 @@ body {
   margin: 0;
   margin-right: 10px;
   color: green;
+  background-color: transparent;
+  border: 0;
 }
 
 .button__preview span {
@@ -35,8 +37,8 @@ body {
 }
 
 .button__delete {
-  font-weight: 800;
-  font-size: 10px;
+  font-weight: 500;
+  font-size: 15px;
   height: 20px;
   width: 20px;
   margin: 0;
@@ -52,7 +54,8 @@ body {
 }
 
 .button__delete:hover {
-  background-color: red;
+  color: red;
+  font-weight: bolder;
 }
 
 .button__add-sound {
@@ -176,8 +179,8 @@ body {
 }
 
 .playing {
-  background-color: #af0807;
-  color: white;
+  background-color: transparent;
+  color: #af0807;
 }
 
 .playing:hover {
@@ -195,6 +198,16 @@ body {
 
 .hidden {
   display: none;
+}
+
+.duration {
+  display: inline-block;
+  margin: 0;
+  position: absolute;
+  font-size: 10px;
+  top: 52%;
+  right: 8%;
+  transform: translateY(-50%);
 }
 
 .source {
