--- a/src/sass/base/_buttons.scss
+++ b/src/sass/base/_buttons.scss
@@ -20,6 +20,8 @@
         margin: 0;
         margin-right: 10px;
         color: green;
+        background-color: transparent;
+        border: 0;
 
         & span {
             font-weight: 900;
@@ -32,8 +34,8 @@
     }
 
     &__delete {
-        font-weight: 800;
-        font-size: 10px;
+        font-weight: 500;
+        font-size: 15px;
         height: 20px;
         width: 20px;
         margin: 0;
@@ -41,12 +43,12 @@
         float: right;
         border: none;
         background-color: transparent;
-       
+        
 
         transition: background-color 0.2s;
         &:hover {
-            background-color: red;
-         
+            color: red;
+            font-weight: bolder;
         }
         position: absolute;
         top: 50%;
