--- a/src/sass/components/_speaker.scss
+++ b/src/sass/components/_speaker.scss
@@ -1,5 +1,11 @@
 .speaker {
-    width: 20px;
+    width: 25px;
     background-color: red;
-    height: 20px; 
+    height: 25px; 
+    text-align: center;
+    border-radius: 10px;
+}
+
+.fa-microphone {
+    color: white;
 }
