--- a/src/css/main.css
+++ b/src/css/main.css
@@ -72,13 +72,15 @@ body {
 }
 
 .button__play {
-  background-color: green;
+  font-size: 12px;
+  background-color: black;
   color: white;
-  width: 70px;
+  width: 40px;
+  height: 20px;
   padding: 0;
-  margin-left: 0px;
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
+  margin: 0;
+  border-radius: 5px;
+  transform: translateX(-15%);
 }
 
 .button__add-files {
@@ -188,16 +190,16 @@ body {
   color: white;
 }
 
-.fas {
-  position: relative;
-  float: left;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, 0%);
+.fa-volume-up {
+  color: white;
 }
 
 .hidden {
   display: none;
+}
+
+.disable {
+  pointer-events: none;
 }
 
 .duration {
@@ -211,14 +213,31 @@ body {
 }
 
 .source {
-  width: 20px;
+  width: 25px;
   background-color: blue;
-  height: 20px;
+  height: 25px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.handle {
+  transform: translateX(-40%);
+  text-align: center;
+}
+
+.fa-volume-up {
+  color: white;
 }
 
 .speaker {
-  width: 20px;
+  width: 25px;
   background-color: red;
-  height: 20px;
+  height: 25px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.fa-microphone {
+  color: white;
 }
 /*# sourceMappingURL=main.css.map */
