--- a/src/sass/base/_buttons.scss
+++ b/src/sass/base/_buttons.scss
@@ -74,13 +74,16 @@
   
 
     &__play {
-        background-color: green;
+        font-size: 12px;
+        background-color: black;
         color: white;
-        width: 70px;
+        width: 40px;
+        height: 20px;
         padding: 0;
-        margin-left: 0px;
-        border-bottom-left-radius: 0;
-        border-top-left-radius: 0;
+        margin: 0;
+        border-radius: 5px;
+        transform: translateX(-15%);
+
     }
 
     &__add-files {
