--- a/src/sass/components/_soundSource.scss
+++ b/src/sass/components/_soundSource.scss
@@ -1,5 +1,16 @@
 .source {
-    width: 20px;
+    width: 25px;
     background-color: blue;
-    height: 20px; 
+    height: 25px; 
+    border-radius: 10px;
+    text-align: center;
+}
+
+.handle {
+    transform: translateX(-40%);
+    text-align: center;
+}
+
+.fa-volume-up {
+    color: white;
 }
