--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,8 @@
 body {
+  background-image: "../src/background/grid.jpg";
+}
+
+body {
   font-family: "Open Sans";
   font-weight: 400;
   line-height: 1.7;
