--- a/src/css/main.css
+++ b/src/css/main.css
@@ -244,4 +244,82 @@ body {
 .fa-microphone {
   color: white;
 }
+
+.scrubber {
+  width: 80%;
+  left: 10%;
+  right: 10%;
+  bottom: 2%;
+  position: absolute;
+}
+
+.scrubber .scrubber__slider {
+  -webkit-appearance: none;
+  /* Override default CSS styles */
+  appearance: none;
+  width: 100%;
+  /* Full-width */
+  height: 25px;
+  /* Specified height */
+  background: #d3d3d3;
+  /* Grey background */
+  outline: none;
+  /* Remove outline */
+  opacity: 0.7;
+  /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s;
+  /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+}
+
+.scrubber .scrubber__slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  /* Override default look */
+  appearance: none;
+  width: 25px;
+  /* Set a specific slider handle width */
+  height: 25px;
+  /* Slider handle height */
+  background: black;
+  /* Green background */
+  cursor: pointer;
+  /* Cursor on hover */
+}
+
+.scrubber .scrubber__slider::-moz-range-thumb {
+  width: 25px;
+  /* Set a specific slider handle width */
+  height: 25px;
+  /* Slider handle height */
+  background: black;
+  /* Green background */
+  cursor: pointer;
+  /* Cursor on hover */
+}
+
+.scrubber__max-input {
+  outline: none;
+  width: 70%;
+  text-align: center;
+  text-decoration: none;
+  border: 1px solid black;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+}
+
+.scrubber__input {
+  width: 10%;
+  margin: 0;
+}
+
+.scrubber__current {
+  width: 20%;
+  margin: 0;
+}
+
+.scrubber__flex {
+  display: flex;
+  justify-content: space-between;
+}
 /*# sourceMappingURL=main.css.map */
