--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,4 +12,5 @@ body {
  @import "components/bar";
  @import "components/soundSource";
  @import "components/speaker";
+ @import "components/scrubber";
 
